@@ -1,3 +1,4 @@
+	* added support for storing symbolic links in .torrent files
 	* added support for uTorrent interpretation of multi-tracker torrents
 	* handle torrents with duplicate filenames
 	* piece timeouts are adjusted to download rate limits
